<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/signIn"
        android:icon="@drawable/ic_baseline_health_and_safety_24"
        android:title="Sign In" />
    <item
        android:id="@+id/signUp"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="Sign Up" />

</menu>